update admin part with add header and sidebar solve other problem

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://res.cloudinary.com/defq8e7r0/image/upload/v1719917570/company_logo_y0ni8l.png" />
+    <!-- <link rel="icon" href="https://res.cloudinary.com/defq8e7r0/image/upload/v1719917570/company_logo_y0ni8l.png" /> -->
+    <link rel="icon" href="https://t3.ftcdn.net/jpg/05/38/30/98/360_F_538309859_lrY7wR1QGZbc4Ka4LQE7t2wl623jcPG7.jpg" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
